New release; re-publish as a fork

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,9 +1,15 @@
 .vscode/**
-src/**
-test/**
-.gitignore
-out/*.map
-.eslintrc.json
+.vscode-test/**
+out/**
 node_modules/**
-images/*.gif
-tsconfig.json
+src/**
+.gitignore
+.yarnrc
+esbuild.js
+vsc-extension-quickstart.md
+**/tsconfig.json
+**/eslint.config.mjs
+**/*.map
+**/*.ts
+**/.vscode-test.*
+langserv
